added new column

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="first">
             <h3 class="nav-title">Awlad.H</h3>
             <ul>
                 <li><a class="color-code" href=""><button class="btn-primary">Download Resume</button></a></li>
@@ -17,9 +17,13 @@
         </header>
         <section class="developer-main">
             <section class="custom">
-            <div class="bc-em"><img src="assets/Group.png" alt=""></div>
-            <div>
-                <h2>"In the near future,I hope to become a Developer."</h2>
+            <div class="bc-em"><img src="assets/Group.png" alt=""> </div>
+            
+            <h1 class="llll">"In the near future,I hope to become a Developer."</h1>
+                <p class="p-class">I,m Yeashir Arafat.Learing Web Development at Programming Hero.The most populer learning platform in BD.Trying to be part of this.</p>
+                <ul>
+                    <li><a href=""><button class="button-ani">Contact With Me</button></a></li>
+                </ul>
             </div>
         </section>
         </section>
