added second pera

--- a/index.html
+++ b/index.html
@@ -27,6 +27,36 @@
             </div>
         </section>
         </section>
+
+        <!-- next section start here -->
+         <section class="big-place">
+            <div class="big-heading">
+                <h2 class="big-why">Why Web Development??</h2>
+                <p class="big-it">It's a important for building Upgrade world and I could be a part of it.Programming hero is helping me now.</p>
+            </div>
+            <div class="first-succ">
+                <div>
+                    <h3 class="first-succ-head">I will do coding and <br> change the world</h3>
+                    <p class="first-succ-para">The world needs to more bigger.I must help it to achive it.So let's change the world view.</p>
+                    <ul>
+                        <li><a href=""><button class="big-first-button">Learn More</button></a></li>
+                    </ul>
+                </div>
+                <div class="big-first-img"><img src="assets/Layer_1.png" alt=""></div>
+
+            </div>
+            <div class="second-succ">
+                <div class="big-second-img"><img src="assets/Group 3.png" alt=""></div>
+                <div>
+                    <h3 class="second-succ-head">I will help people by creating modern web system.</h3>
+                    <p class="second-succ-para">The world needs to more bigger.I must help it to achive it.So let's change the world view.</p>
+                    <ul>
+                        <li><a href=""><button class="big-first-button">Learn More</button></a></li>
+                    </ul>
+                </div>
+            </div>
+         </section>
+
     </header>
     <main>
         
