added second page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
                     </ul>
                 </div>
             </div>
+
+            <div class="third-succ">
+                <div>
+                    <h3 class="first-succ-head">I will do coding and change <br> the world</h3>
+                    <p class="first-succ-para">The world needs to more bigger.I must help it to achive it.So let's change the world view.</p>
+                    <ul>
+                        <li><a href=""><button class="big-first-button">Learn More</button></a></li>
+                    </ul>
+                </div>
+                <div class="big-first-img"><img src="assets/Group 4.png" alt=""></div>
+            </div>
          </section>
 
     </header>
