--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="right-click">
                     <input class="feedbac" placeholder="Suggest me any feedback for me" type="Feedback">
-                    <button class="now" type="submit">Submit</button>
+                    <a href=""><button class="now" type="submit">Submit</button></a>
                 </div>
             
             </section>
@@ -150,18 +150,15 @@
     <main>
 
     </main>
-    <footer>
-        
-        <section class="icon">
-            <div class="last-abd">
-                <h4>Open commit by Yeashir Arafat</h4>
-            </div>
-            <div class="maraton">
-                <img src="assets/facebook.png" alt="">
-                <img src="assets/github.png" alt="">
-                <img src="assets/linkedin-icon 1.png" alt="">
-            </div>
-        </section>
+    <footer class="footer-container">
+        <div class="first-footer-icon">
+            <h3>An open commitment by Yeashir Arafat.</h3>
+        </div>
+        <div class="iconsec">
+             <img src="assets/facebook.png" alt="">
+            <img src="assets/github.png" alt="">
+            <img src="assets/linkedin-icon 1.png" alt="">
+        </div>
     </footer>
 </body>
 
